tests/ast_interpreter/err_index_on_int.expected
<string>:3:11: error: only lists and strings support indexing
    print(x[0]);
          ^^^^
