tests/ast_interpreter/err_index_on_int.nx
fun main() {
    var x = 42;
    print(x[0]);
}